Bug 1053000 - Making sure the .fake-number div doesn't cause scrollbars to show in collapsed mode.

--- a/apps/callscreen/style/oncall_status_bar.css
+++ b/apps/callscreen/style/oncall_status_bar.css
@@ -110,10 +110,7 @@
   }
 
   .fake-number {
-    position: absolute;
-    line-height: 0;
-    visibility: hidden;
-    white-space: nowrap;
+    display: none;
   }
 
   /* Don't display held calls unless there is only one call */
